# semantic-gallery

./: .env.template  .gitignore  Cargo.toml  IDEATION.md  README.md  config.toml  docker-compose.yml
migrations/: 20250318200138_init.sql
src/: main.rs
src/api/: mod.rs
src/cli/: commands.rs
src/core/: config.rs  db.rs  embedding.rs  foo.rs  ingest.rs  media.rs  mod.rs  state.rs
src/utils/: logging.rs
